Complete the web app and add mobile support

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div id="nav">
-        <h1>Projects</h1>
+        <div id="header">
+        </div>
         <div id="projects">
             <button id="add_new_project">+</button>
         </div>
